--- a/advice-slip-API/style.css
+++ b/advice-slip-API/style.css
@@ -1,17 +1,17 @@
 @charset "UTF-8";
 
-*{
+* {
     border: none;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
 }
 
-body{
+body {
     background-image: linear-gradient(500deg, #993399, #563299);
 }
 
-h1{
+h1 {
     margin: auto;
     padding: 10px;
     color: white;
@@ -20,7 +20,7 @@ h1{
     margin-top: 5px;
 }
 
-.container{
+.container {
     display: block;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,7 @@ h1{
     padding: 5px;
 }
 
-button{
+button {
     width: 100px;
     height: 30px;
     padding: 10px;
@@ -45,17 +45,19 @@ button{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);margin-top: 70px;
+    transform: translate(-50%, -50%);
+    margin-top: 70px;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #8e138e; /* Cor mais clara para o hover */
+    background-color: #8e138e;
+    /* Cor mais clara para o hover */
     padding: 5px;
 }
 
-p{
+p {
     color: white;
     position: absolute;
     top: 50%;
@@ -63,5 +65,3 @@ p{
     transform: translate(-50%, -50%);
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
