--- a/aula153(Criando-um-DataGridView)/style.css
+++ b/aula153(Criando-um-DataGridView)/style.css
@@ -1,8 +1,64 @@
 @charset "UTF-8";
 
-*{
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
     border: none;
+}
+
+.dgv {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.dgv_titulos {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+    background-color: #138;
+    color: #fff;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.dgv_titulos div,
+.dgv_linha div {
+    padding: 5px;
+}
+
+.dgv_dados {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.dgv_linha {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+.c1 {
+    width: 50px;
+}
+
+.c2 {
+    width: 150px;
+}
+
+.c3 {
+    width: 150px;
+}
+
+.c4 {
+    width: 150px;
+}
+
+.c5 {
+    width: 70px;
 }
