--- a/falso-login/style.css
+++ b/falso-login/style.css
@@ -10,6 +10,7 @@ header {
     background-color: #a3130d;
     height: 100px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    height: 60px;
 }
 
 .img_login {
@@ -43,7 +44,11 @@ header {
 
 input {
     width: 200px;
-    border-radius: 5px;
+    border-radius: 0px;
+    text-align: left;
+    padding: 4px;
+    background-color: #E8F0FE;
+    margin-left: 20px;
 }
 
 .user,
@@ -99,4 +104,14 @@ form #btn_login:hover {
     color: #4169E1;
     font-family: 'Calibri';
     top: 250px;
+}
+
+img {
+    width: 43px;
+    height: 60px;
+    margin-left: 25px;
+}
+
+label {
+    color: #4172E7;
 }
