--- a/FinanceDash/src/assets/css/dark-theme.css
+++ b/FinanceDash/src/assets/css/dark-theme.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: white;
 }
 
@@ -37,7 +37,7 @@ form {
 
 input[type="text"],
 select {
-    width: 100%;
+    width: 97%;
     padding: 12px;
     border: 1px solid #444;
     border-radius: 6px;
@@ -45,6 +45,7 @@ select {
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
     background-color: #333;
     color: white;
+    font-family: 'Lato', sans-serif;
 }
 
 input[type="text"]:focus,
@@ -63,6 +64,7 @@ button {
     border-radius: 6px;
     width: 100%;
     transition: background-color 0.3s ease;
+    font-family: 'Lato', sans-serif;
 }
 
 button:hover {
@@ -81,6 +83,8 @@ button:hover {
     background-color: #333;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease;
+    margin-bottom: 20px;
+    font-family: 'Lato', sans-serif;
 }
 
 .stock-info:hover,
@@ -100,24 +104,47 @@ button:hover {
     cursor: pointer;
     background-color: #333;
     border-radius: 25px;
+    font-family: 'Lato', sans-serif;
+}
+
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.chart {
+    width: 100%;
+    height: 400px;
+    margin: 10px 0;
+}
+
+.ocultar{
+    display: none;
 }
 
 @media (max-width: 767px) {
-
     html,
     body {
+        display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         padding: 10px;
         box-sizing: border-box;
+        margin: 0;
+        width: 100%;
+        height: 100%;
     }
 
     form {
-        max-width: 90%;
+        max-width: 100%;
         margin-bottom: 20px;
         padding: 20px;
         margin-top: 70px;
+        background-color: #333;
+        box-sizing: border-box;
     }
 
     .stock-info,
@@ -126,5 +153,23 @@ button:hover {
         padding: 15px;
         width: 100%;
         box-sizing: border-box;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+        font-family: 'Lato', sans-serif;
+    }
+
+    .chart-container {
+        width: 100%;
+        overflow-x: auto;
+        display: block;
+    }
+
+    .chart {
+        width: 1200px;
+        height: auto;
+        margin: 20px 0;
     }
 }
+
+
