--- a/FinanceDash/src/assets/css/light-theme.css
+++ b/FinanceDash/src/assets/css/light-theme.css
@@ -9,7 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 form {
@@ -38,6 +39,8 @@ select {
     border-radius: 6px;
     outline: none;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 input[type="text"]:focus,
@@ -56,6 +59,8 @@ button {
     border-radius: 6px;
     width: 100%;
     transition: background-color 0.3s ease;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 button:hover {
@@ -74,6 +79,8 @@ button:hover {
     background-color: #ffffff;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 .stock-info:hover,
@@ -93,24 +100,58 @@ button:hover {
     cursor: pointer;
     background-color: #cccccc51;
     border-radius: 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+}
+
+.chart-container {
+    display: flex;
+    /* Isso fará os gráficos ficarem um ao lado do outro se necessário */
+    flex-direction: column;
+    /* Garante que os gráficos estejam empilhados verticalmente */
+    align-items: center;
+    /* Centraliza os gráficos */
+    margin-top: 20px;
+    /* Espaço acima do gráfico */
+
+}
+
+.chart {
+    width: 100%;
+    /* Ajusta para a largura total do contêiner pai */
+    height: 400px;
+    /* Ajuste a altura conforme necessário */
+    margin: 10px 0;
+    /* Espaçamento em cima e embaixo dos gráficos */
+}
+
+.ocultar {
+    display: none;
 }
 
 @media (max-width: 767px) {
 
     html,
     body {
+        display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         padding: 10px;
         box-sizing: border-box;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f4f4f9;
     }
 
     form {
-        max-width: 90%;
+        max-width: 100%;
         margin-bottom: 20px;
         padding: 20px;
-        margin-top: 30px;
+        margin-top: 70px;
+        background-color: #fff;
+        box-sizing: border-box;
     }
 
     .stock-info,
@@ -119,5 +160,20 @@ button:hover {
         padding: 15px;
         width: 100%;
         box-sizing: border-box;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .chart-container {
+        width: 100%;
+        overflow-x: auto;
+        display: block;
+    }
+
+    .chart {
+        width: 1200px;
+        height: auto;
+        margin: 20px 0;
     }
 }
