--- a/FinanceDash/src/assets/views/index.html
+++ b/FinanceDash/src/assets/views/index.html
@@ -16,31 +16,45 @@
         </div>
         <div class="mb-3"> <label for="timeRange">Intervalo de tempo:</label> <select id="timeRange"
                 class="form-select">
-                <option value="7d">Últimos 7 dias</option>
-                <option value="30d">Último mês</option>
-                <option value="1y">Último ano</option>
-            </select> </div> <button type="submit" id="searchBtn" class="btn btn-primary">Pesquisar</button>
+                <option value="0d">Desempenho agora</option>
+                <option value="1d">Desempenho diário</option>
+                <option value="7d">Desempenho nos últimos 7 dias</option>
+                <option value="30d">Desempenho no último mês</option>
+            </select> </div> 
+            <div class="mb-3"> <label for="typeChart">Tipo de gráfico:</label> <select id="typeChart"
+                class="form-select">
+                <option value="line">Gráfico de linha</option>
+                <option value="bar">Gráfico de barras</option>
+            </select> </div> 
+            <button type="submit" id="searchBtn" class="btn btn-primary">Pesquisar</button>
     </form>
 
-    <div class="stock-info">
+    <div class="stock-info ocultar" id="stock-info">
         <h2 id="stock-name"></h2>
         <div class="price-info">
-            <p>Preço Atual: <span id="current-price"></span></p>
-            <p>Variação: <span id="change" class="positive">+2.55</span> (<span id="change-percent"
-                    class="positive">+1.10%</span>)</p>
+            <p id="p_current_price">Preço Atual: <span id="current-price"></span></p>
+            <p id="p_change">Variação: <span id="change" class="positive"></span> (<span id="change-percent"
+                    class="positive"></span>)</p>
         </div>
         <div class="additional-info">
             <p>Abertura: <span id="open-price"></span></p>
-            <p>Fechamento Anterior: <span id="previous-close">$231.30</span></p>
-            <p>Máximo do Dia: <span id="high">$237.49</span></p>
-            <p>Mínimo do Dia: <span id="low">$232.37</span></p>
-            <p>Volume: <span id="volume">64,751,367</span></p>
-            <p>Último Dia de Negociação: <span id="latest-day">2024-10-15</span></p>
+            <p id="p_previous_close">Fechamento Anterior: <span id="previous-close"></span></p>
+            <p>Máximo do Dia: <span id="high"></span></p>
+            <p>Mínimo do Dia: <span id="low"></span></p>
+            <p>Volume: <span id="volume"></span></p>
+            <p id="p_latest_day">Último Dia de Negociação: <span id="latest-day"></span></p>
         </div>
     </div>
 
+    <div class="chart-container">
+        <canvas id="stockChart" class="chart ocultar" width="400" height="200"></canvas>
+        <canvas id="weeklyChart" class="chart ocultar" width="400" height="200"></canvas>
+        <canvas id="stockChart" class="chart ocultar" width="400" height="200"></canvas>
+    </div>
 
     <script type="module" src="../js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 
 </html>
