--- a/FinanceDash/src/assets/views/index.html
+++ b/FinanceDash/src/assets/views/index.html
@@ -29,8 +29,8 @@
             <button type="submit" id="searchBtn" class="btn btn-primary">Pesquisar</button>
     </form>
 
-    <div class="stock-info ocultar" id="stock-info">
-        <h2 id="stock-name"></h2>
+    <div class="stock-info ocultar " id="stock-info">
+        <h2 id="stock-name">AAPL</h2>
         <div class="price-info">
             <p id="p_current_price">Preço Atual: <span id="current-price"></span></p>
             <p id="p_change">Variação: <span id="change" class="positive"></span> (<span id="change-percent"
