--- a/FinanceDash/src/assets/css/light-theme.css
+++ b/FinanceDash/src/assets/css/light-theme.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-    background-color: #f4f4f9;
+    background-color: #eee;
     height: 100%;
     margin: 0;
     box-sizing: border-box;
@@ -129,12 +129,25 @@ button:hover {
     display: none;
 }
 
+
+h2{
+    text-align: center;
+    border: 2px solid #333;
+    padding: 25px;
+    border-radius: 50px;
+}
+
+span {
+    font-weight: bold;
+    color: rgb(52, 214, 52);
+}
+
 @media (max-width: 767px) {
 
     html,
     body {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         flex-direction: column;
         padding: 10px;
@@ -143,13 +156,14 @@ button:hover {
         width: 100%;
         height: 100%;
         background-color: #f4f4f9;
+        overflow-y: auto;
     }
 
     form {
         max-width: 100%;
-        margin-bottom: 20px;
         padding: 20px;
-        margin-top: 70px;
+        margin-bottom: 5px;
+        margin-top: 20px;
         background-color: #fff;
         box-sizing: border-box;
     }
@@ -175,5 +189,12 @@ button:hover {
         width: 1200px;
         height: auto;
         margin: 20px 0;
+    }
+
+    h2{
+        text-align: center;
+        border: 2px solid #333;
+        padding: 25px;
+        border-radius: 50px;
     }
 }
