Resolvi alguns problemas de exibição

--- a/FinanceDash/src/assets/views/index.html
+++ b/FinanceDash/src/assets/views/index.html
@@ -16,6 +16,7 @@
         </div>
         <div class="mb-3"> <label for="timeRange">Intervalo de tempo:</label> <select id="timeRange"
                 class="form-select">
+                <option value="">Selecione o intervalo</option>
                 <option value="0d">Desempenho agora</option>
                 <option value="1d">Desempenho diário</option>
                 <option value="7d">Desempenho nos últimos 7 dias</option>
@@ -23,6 +24,7 @@
             </select> </div> 
             <div class="mb-3"> <label for="typeChart">Tipo de gráfico:</label> <select id="typeChart"
                 class="form-select">
+                <option value="">Selecione o tipo de gráfico</option>
                 <option value="line">Gráfico de linha</option>
                 <option value="bar">Gráfico de barras</option>
             </select> </div> 
